--- a/client/package.json
+++ b/client/package.json
@@ -9,15 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.7.9",
-    "cookies-next": "^5.0.2",
-    "date-fns": "^4.1.0",
-    "jsonwebtoken": "^9.0.2",
     "next": "^15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
-    "socket.io-client": "^4.8.1"
+    "axios": "^1.7.9",
+    "cookies-next": "^5.0.2",
+    "date-fns": "^4.1.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
