--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,6 @@
 		"dotenv": "^16.4.7",
 		"express": "^4.21.2",
 		"lodash": "^4.17.21",
-		"mongoose": "^8.9.1",
-		"socket.io": "^4.8.1"
+		"mongoose": "^8.9.1"
 	}
 }
