--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
 		"@types/express": "^4.17.21",
 		"@types/lodash": "^4.17.13",
 		"@types/mongoose": "^5.11.97",
+		"@types/node": "^22.10.2",
 		"nodemon": "^3.1.9",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.7.2"
