--- a/client/package.json
+++ b/client/package.json
@@ -9,17 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^15.1.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
     "axios": "^1.7.9",
     "cookies-next": "^5.0.2",
     "date-fns": "^4.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "jose": "^5.9.6",
+    "next": "^15.1.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
