--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,18 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@edgestore/react": "^0.2.2",
+		"@edgestore/server": "^0.2.2",
 		"axios": "^1.7.9",
 		"cookies-next": "^5.0.2",
 		"date-fns": "^4.1.0",
 		"jose": "^5.9.6",
+		"lucide-react": "^0.469.0",
 		"next": "^15.1.3",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react-dom": "^19.0.0",
+		"react-dropzone": "^14.3.5",
+		"tailwind-merge": "^2.6.0"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
