--- a/server/package.json
+++ b/server/package.json
@@ -16,20 +16,27 @@
 		"@types/express": "^4.17.21",
 		"@types/lodash": "^4.17.13",
 		"@types/mongoose": "^5.11.97",
+		"@types/multer": "^1.4.12",
 		"@types/node": "^22.10.2",
 		"nodemon": "^3.1.9",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.7.2"
 	},
 	"dependencies": {
+		"@edgestore/react": "^0.2.2",
+		"@edgestore/server": "^0.2.2",
 		"axios": "^1.7.9",
 		"body-parser": "^1.20.3",
 		"compression": "^1.7.5",
+		"cookie": "^1.0.2",
 		"cookie-parser": "^1.4.7",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.7",
+		"edgestore": "^1.0.3",
 		"express": "^4.21.2",
 		"lodash": "^4.17.21",
-		"mongoose": "^8.9.1"
+		"mongoose": "^8.9.1",
+		"multer": "^1.4.5-lts.1",
+		"zod": "^3.24.1"
 	}
 }
