--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
 	"description": "",
 	"main": "index.ts",
 	"scripts": {
-		"start": "nodemon"
+		"dev": "nodemon",
+		"build": "tsc",
+		"start": "node dist/index.js"
 	},
 	"author": "",
 	"license": "ISC",
@@ -16,7 +18,6 @@
 		"@types/express": "^4.17.21",
 		"@types/lodash": "^4.17.13",
 		"@types/mongoose": "^5.11.97",
-		"@types/multer": "^1.4.12",
 		"@types/node": "^22.10.2",
 		"nodemon": "^3.1.9",
 		"ts-node": "^10.9.2",
@@ -35,8 +36,6 @@
 		"edgestore": "^1.0.3",
 		"express": "^4.21.2",
 		"lodash": "^4.17.21",
-		"mongoose": "^8.9.1",
-		"multer": "^1.4.5-lts.1",
-		"zod": "^3.24.1"
+		"mongoose": "^8.9.1"
 	}
 }
