--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/axios": "^0.14.4",
 		"@types/body-parser": "^1.19.5",
 		"@types/compression": "^1.7.5",
 		"@types/cookie-parser": "^1.4.8",
@@ -18,7 +19,7 @@
 		"@types/express": "^4.17.21",
 		"@types/lodash": "^4.17.13",
 		"@types/mongoose": "^5.11.97",
-		"@types/node": "^22.10.2",
+		"@types/node": "^22.10.5",
 		"nodemon": "^3.1.9",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.7.2"
@@ -36,6 +37,6 @@
 		"edgestore": "^1.0.3",
 		"express": "^4.21.2",
 		"lodash": "^4.17.21",
-		"mongoose": "^8.9.1"
+		"mongoose": "^8.9.4"
 	}
 }
