--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
 		"compression": "^1.7.5",
 		"cookie": "^1.0.2",
 		"cookie-parser": "^1.4.7",
+		"cors": "^2.8.5",
 		"dotenv": "^16.4.7",
 		"edgestore": "^1.0.3",
 		"express": "^4.21.2",
