--- a/server/package.json
+++ b/server/package.json
@@ -37,7 +37,6 @@
 		"edgestore": "^1.0.3",
 		"express": "^4.21.2",
 		"lodash": "^4.17.21",
-		"mongoose": "^8.9.4",
-		"serverless-http": "^3.2.0"
+		"mongoose": "^8.9.4"
 	}
 }
