--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,12 +1,21 @@
 {
-	"compilerOptions": {
-		"module": "NodeNext",
-		"moduleResolution": "nodenext",
-		"baseUrl": "src",
-		"outDir": "dist",
-		"sourceMap": true,
-		"noImplicitAny": true,
-		"esModuleInterop": true
-	},
-	"include": ["src/**/*"]
+  "compilerOptions": {
+    "module": "commonjs",
+    "declaration": true,
+    "removeComments": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+    "target": "ES2021",
+    "sourceMap": true,
+    "outDir": "./dist",
+    "baseUrl": "./",
+    "incremental": true,
+    "skipLibCheck": true,
+    "strictNullChecks": false,
+    "noImplicitAny": false,
+    "strictBindCallApply": false,
+    "forceConsistentCasingInFileNames": false,
+    "noFallthroughCasesInSwitch": false
+  }
 }
