--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "mongoose": "^8.9.5",
+    "nest": "^0.1.6",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
