--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lesson04",
+  "name": "server",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -20,6 +20,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "nest": "^0.1.6",
+    "@nestjs/cli": "^10.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^10.0.0",
@@ -31,12 +33,10 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "mongoose": "^8.9.5",
-    "nest": "^0.1.6",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
     "@nestjs/mapped-types": "^2.0.4",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^10.0.0",
