--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
 	"private": true,
 	"license": "UNLICENSED",
 	"scripts": {
-		"build": "npx @nestjs/cli build",
+		"build": "npm i && npx @nestjs/cli build",
 		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
 		"start": "npx @nestjs/cli start",
 		"start:dev": "npx @nestjs/cli start --watch",
