--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,9 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev --turbopack",
+		"dev": "nodemon",
 		"build": "next build",
-		"start": "nodemon",
+		"start": "next start",
 		"lint": "next lint"
 	},
 	"dependencies": {
