--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,18 +1,18 @@
-FROM node:23.7
+FROM node:23.7-alpine
 WORKDIR /src
 COPY package*.json ./
+COPY tsconfig*.json ./ 
+
 RUN npm install
 
 COPY . .
 
 ENV EDGE_STORE_ACCESS_KEY="53FSG2OHuN1QpXdeIzALJQRMMNZRdPbg"
 ENV EDGE_STORE_SECRET_KEY="VnkDfU10MD4vuQMetFMaltBp1NxtyPPBQeeBItvtOiqGocqo"
-ENV SERVER_HOST="http://localhost"
-ENV SERVER_PORT=8080
-ENV CLIENT_PORT=3000
+ENV SERVER_URL="http://localhost:8080"
 
 EXPOSE 3000
 
 RUN npm run build
 
-CMD npm start -- -p ${CLIENT_PORT}
+CMD ["npm", "start"]
