--- a/client/package.json
+++ b/client/package.json
@@ -16,15 +16,17 @@
 		"date-fns": "^4.1.0",
 		"jose": "^5.9.6",
 		"lucide-react": "^0.469.0",
-		"next": "^15.1.6",
+		"next": "^15.1.7",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-dropzone": "^14.3.5",
-		"tailwind-merge": "^2.6.0"
+		"tailwind-merge": "^2.6.0",
+		"zod": "^3.24.2"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
-		"@types/node": "^20",
+		"@types/next": "^8.0.7",
+		"@types/node": "^20.17.19",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"eslint": "^9",
@@ -32,6 +34,6 @@
 		"nodemon": "^3.1.9",
 		"postcss": "^8",
 		"tailwindcss": "^3.4.1",
-		"typescript": "^5"
+		"typescript": "^5.7.3"
 	}
 }
