--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,51 @@
 services:
+  mongodb:
+    image: mongo:latest
+    container_name: database
+    restart: always
+    command: --auth
+    ports:
+      - "27017:27017"
+    volumes:
+      - ./database:/data/db
+      - ./k8s/database.js:/docker-entrypoint-initdb.d/init-mongo.js
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=admin
+      - MONGO_INITDB_ROOT_PASSWORD=password
+      - MONGO_INITDB_DATABASE=f4_db
+    networks:
+      - threads
+
+  server:
+    image: threads:server
+    container_name: server
+    restart: always
+    build: ./server
+    environment:
+      - MONGODB_URI=mongodb://f4_user:f4_password@mongodb:27017/f4_db?authSource=f4_db
+    ports:
+      - "8080:8080"
+    depends_on:
+      - mongodb
+    networks:
+      - threads
+
   client:
+    image: threads:client
+    container_name: client
     restart: always
     build: ./client
     environment:
       - EDGE_STORE_ACCESS_KEY=53FSG2OHuN1QpXdeIzALJQRMMNZRdPbg
       - EDGE_STORE_SECRET_KEY=VnkDfU10MD4vuQMetFMaltBp1NxtyPPBQeeBItvtOiqGocqo
-      - SERVER_HOST=http://localhost
-      - SERVER_PORT=8080
-      - CLIENT_PORT=3001
+      - SERVER_URL=http://localhost:8080
     ports:
-      - "3001:3001"
+      - "3000:3000"
     depends_on:
       - server
-    stop_grace_period: 10s
-  
-  server:
-    extra_hosts:
-      - host.docker.internal:host-gateway
-    restart: always
-    build: ./server
-    environment:
-      - MONGODB_URI=mongodb+srv://vadymabakumov:mjvhOfbpBDSaTBk4@f4cluster.i7oqv.mongodb.net/test?retryWrites=true&w=majority
-      - CLIENT_HOST=http://localhost
-      - CLIENT_PORT=3001
-      - SERVER_PORT=8080
-    ports:
-      - "8080:8080"
-    stop_grace_period: 10s
+    networks:
+      - threads
+
+networks:
+  threads:
+    driver: bridge
