--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -9,6 +9,7 @@ COPY . .
 
 ENV EDGE_STORE_ACCESS_KEY="53FSG2OHuN1QpXdeIzALJQRMMNZRdPbg"
 ENV EDGE_STORE_SECRET_KEY="VnkDfU10MD4vuQMetFMaltBp1NxtyPPBQeeBItvtOiqGocqo"
+ENV NEXT_PUBLIC_SERVER_URL="https://forum-srv.up.railway.app"
 
 EXPOSE 3000
 
