--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -7,8 +7,16 @@ RUN npm install
 
 COPY . .
 
-EXPOSE 3000
+ARG EDGE_STORE_ACCESS_KEY
+ARG EDGE_STORE_SECRET_KEY
+ARG NEXT_PUBLIC_SERVER_URL
+
+ENV EDGE_STORE_ACCESS_KEY=$EDGE_STORE_ACCESS_KEY \
+	EDGE_STORE_SECRET_KEY=$EDGE_STORE_SECRET_KEY \
+	NEXT_PUBLIC_SERVER_URL=$NEXT_PUBLIC_SERVER_URL
 
 RUN npm run build
+
+EXPOSE 3000
 
 CMD ["npm", "start"]
