cors origin true

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -8,10 +8,8 @@ RUN npm install
 COPY . .
 
 ARG MONGODB_URI
-ARG CLIENT_URL
 
-ENV MONGODB_URI=$MONGODB_URI \
-	CLIENT_URL=$CLIENT_URL
+ENV MONGODB_URI=$MONGODB_URI
 
 EXPOSE 8080
 
