cors origin client

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -8,8 +8,10 @@ RUN npm install
 COPY . .
 
 ARG MONGODB_URI
+ARG CLIENT_URL
 
-ENV MONGODB_URI=$MONGODB_URI
+ENV MONGODB_URI=$MONGODB_URI \
+	CLIENT_URL=$CLIENT_URL
 
 EXPOSE 8080
 
